--- a/Assignment2.html
+++ b/Assignment2.html
@@ -4,32 +4,33 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Assignment 2 Report</title>
-<link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css@5.5.1/github-markdown-light.min.css">
 <style>
-  body { margin: 0; padding: 0; background: #fff; }
+  body { margin: 0; padding: 0; background: #fff; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial; }
   .container { max-width: 900px; margin: 0 auto; padding: 32px; }
   .markdown-body { box-sizing: border-box; min-width: 200px; max-width: 100%; margin: 0 auto; }
-  /* Improve table rendering and wrapping */
+  .repo-link { font-size: 15px; margin-bottom: 16px; }
+  .repo-link a { color: #0969da; text-decoration: none; }
+  .repo-link a:hover { text-decoration: underline; }
   .markdown-body table { width: 100%; border-collapse: collapse; }
   .markdown-body table th, .markdown-body table td { border: 1px solid #d0d7de; padding: 6px 8px; vertical-align: top; }
   .markdown-body table th { background: #f6f8fa; }
   .markdown-body code, .markdown-body pre { white-space: pre-wrap; word-break: break-word; }
-  /* Print styles */
   @media print {
     body { background: #fff; }
     .container { padding: 0; }
-    .markdown-body h1, .markdown-body h2 { page-break-before: auto; }
     .markdown-body table, .markdown-body pre { page-break-inside: avoid; }
   }
 </style>
 </head>
 <body>
   <div class="container">
+    <div class="repo-link">
+      <strong>Repository:</strong> <a href="https://github.com/may98ank/LLM-evaluation" target="_blank">https://github.com/may98ank/LLM-evaluation</a>
+    </div>
     <article id="content" class="markdown-body">Loading…</article>
   </div>
 
-  <!-- Raw Markdown (kept hidden) -->
   <textarea id="md" style="display:none"># Exercise 2
 **COMPSCI 520 — Theory and Practice of Software Engineering**  
 **Author:** Fnu Mayank  
@@ -448,19 +449,12 @@ Both injected faults were successfully caught, validating the effectiveness of t
 
 </textarea>
 
-  <!-- Marked.js for client-side Markdown rendering -->
   <script src="https://cdn.jsdelivr.net/npm/marked@12.0.2/marked.min.js"></script>
   <script>
     (function() {
       const src = document.getElementById('md').value;
-      // Configure marked to support GitHub-flavored tables
-      marked.setOptions({
-        gfm: true,
-        breaks: false
-      });
+      marked.setOptions({ gfm: true, breaks: false });
       document.getElementById('content').innerHTML = marked.parse(src);
-      // Optional: add an automatic TOC if headings exist
-      // (kept minimal to avoid external deps)
     })();
   </script>
 </body>
